--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -33,41 +33,60 @@
                         <div class="form-row">
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
+                                <div class="form-group w-100">
                                     <div class="input-group">
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                            min="1" max="99" data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn .buy-now-button rounded-0"
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                            <input class="form-control qty_input" type="number" name="quantity"
+                                                value="1" min="1" max="99" data-item_id="{{ product.id }}"
+                                                id="id_qty_{{ product.id }}">
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn .buy-now-button rounded-0"
+                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-plus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div class="form-row">
+                                            {% with product.has_days as s %}
+                                            {% if s %}
+                                            <div class="col-12">
+                                                <p><strong>Day:</strong></p>
+                                                <select class="form-control rounded-0 w-100" name="product_days"
+                                                    id="id_product_days">
+                                                    <option value="monday">Monday</option>
+                                                    <option value="tuesday">Tuesday</option>
+                                                    <option value="wednesday" selected>Wednesday</option>
+                                                    <option value="thursday">Thursday</option>
+                                                    <option value="friday">Friday</option>
+                                                </select>
+                                            </div>
+                                            {% endif %}
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="submit"
+                                                class="buy-now-button btn-lg rounded-0 text-uppercase mt-5"
+                                                value="Add to Bag">
+                                            <hr>
+                                            <a href="{% url 'products' %}" class="btn-secondary btn-lg rounded-0 mt-5">
+                                                <span class="icon">
+                                                    <i class="fas fa-chevron-left btn-secondary"></i>
+                                                </span>
+                                                <span class="text-uppercase">Keep Shopping</span>
+                                            </a>
+                                        </div>
+                                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                        {% endwith %}
                                     </div>
                                 </div>
-                                <div class="form-row">
-                                {% with product.has_days as s %}
-                                {% if s %}
-                                <div class="col-12">
-                                    <p><strong>Day:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_days" id="id_product_days">
-                                        <option value="monday">Monday</option>
-                                        <option value="tuesday">Tuesday</option>
-                                        <option value="wednesday" selected>Wednesday</option>
-                                        <option value="thursday">Thursday</option>
-                                        <option value="friday">Friday</option>
-                                    </select>
-                                </div>
-                                {% endif %}
                             </div>
-                            <div class="col-12">
-                                <input type="submit" class="buy-now-button btn-lg rounded-0 text-uppercase mt-5"
-                                    value="Add to Bag">
-                                <hr>
-                                <a href="{% url 'products' %}" class="btn-secondary btn-lg rounded-0 mt-5">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left btn-secondary"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                            </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            {% endwith %}
                         </div>
                     </form>
                 </div>
@@ -77,4 +96,9 @@
 </div>
 
 
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
