--- a/templates/base.html
+++ b/templates/base.html
@@ -128,7 +128,13 @@
     </header>
 
     {% if messages %}
-    <div class="message-container"></div>
+    <div class="message-container">
+        {% for messages in messages %}
+        {% include 'includes/' %}
+                {% include 'includes/toast/toast_success.html' %}
+        {% endfor %}
+
+    </div>
     {% endif %}
 
     {% block page_header %}
@@ -200,6 +206,9 @@
 
 
     {% block postloadjs %}
+    <script type="text/javascript">
+        $('toast').toast('show');
+    </script>
     {% endblock %}
 
 
