--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,13 +1,13 @@
-<!-- Toast Container -->
+<!--Toast Container-->
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center custom-toast"
     data-autohide="false" style="min-height: 200px;">
 
-    <!-- Toast Header -->
+    <!--Toast Header-->
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <!--May need another div to give danger background-->
         <div class="arrow-up arrow-danger"></div>
+        <div class="w-100 toast-capper bg-danger"></div>
         <div class="toast-header">
-            <strong class="mr-auto">Error</strong>
+            <strong class="mr-auto">Error!!</strong>
             <small>11 mins ago</small>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
