--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -4,9 +4,10 @@
 
     <!-- Toast Header -->
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="arrow-up bg-danger"></div>
+        <div class="arrow-up arrow-info"></div>
+        <div class="w-100 toast-capper bg-info"></div>
         <div class="toast-header">
-            <strong class="mr-auto">Error</strong>
+            <strong class="mr-auto"> Alert</strong>
             <small>11 mins ago</small>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
