--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -4,7 +4,8 @@
 
     <!-- Toast Header -->
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="arrow-up arrow-success"></div>   
+        <div class="arrow-up arrow-success"></div> 
+        <div class="w-100 toast-capper bg-success"></div>  
         <div class="toast-header">
             <strong class="mr-auto">Bootstrap</strong>
             <small>11 mins ago</small>
