--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -4,8 +4,8 @@
 
     <!-- Toast Header -->
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <!--May need another div to give danger background-->
         <div class="arrow-up arrow-warning"></div>
+        <div class="w-100 toast-capper bg-danger"></div>
         <div class="toast-header">
             <strong class="mr-auto">Error</strong>
             <small>11 mins ago</small>
