--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -7,8 +7,8 @@
         <div class="arrow-up arrow-danger"></div>
         <div class="w-100 toast-capper bg-danger"></div>
         <div class="toast-header">
-            <strong class="mr-auto">Error!!</strong>
-            <small>11 mins ago</small>
+            <strong class="mr-auto">Error !!!</strong>
+            <small><i class="fas fa-dumbbell fa-sm"></i></small>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
