--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -7,8 +7,8 @@
         <div class="arrow-up arrow-success"></div> 
         <div class="w-100 toast-capper bg-success"></div>  
         <div class="toast-header">
-            <strong class="mr-auto">Temple Lean</strong>
-            <small><i class="fas fa-dumbbell"></i></small>
+            <strong class="mr-auto">Success !!!</strong>
+            <small>Temple Lean <i class="fas fa-dumbbell fa-sm"></i></small>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
