--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -3,12 +3,12 @@
     data-autohide="false" style="min-height: 200px;">
 
     <!-- Toast Header -->
-    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast" role="alert" data-delay="10000" aria-live="assertive" aria-atomic="true">
         <div class="arrow-up arrow-warning"></div>
         <div class="w-100 toast-capper bg-danger"></div>
         <div class="toast-header">
-            <strong class="mr-auto">Error</strong>
-            <small>11 mins ago</small>
+            <strong class="mr-auto">Warning !!!</strong>
+            <small><i class="fas fa-dumbbell fa-sm"></i></small>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
