--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -117,7 +117,7 @@
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <a href="" class="buy-now-button rounded-0 btn-lg">
+                                <a href="{% url 'checkout' %}" class="buy-now-button rounded-0 btn-lg">
                                     <span class="text-uppercase">Secure Checkout</span>
                                     <span class="icon">
                                         <i class="fas fa-user-lock"></i>
