--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <!--Stripe-->
+    <script src="https://js.stripe.com/v3/"></script>
 
     {% endblock %}
     <!-- extra js -->
@@ -213,7 +215,7 @@
         </div>
     </footer>
 
-
+<!--Toasts-->
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
