--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,6 +30,7 @@ body {
     height: calc(100vh - 175px);
     color: #1a1a1a;
     font-family: 'RocknRoll One';
+    overflow:auto;
 }
 
 .text-lean {
