--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -3,7 +3,7 @@
 .StripeElement,
 .stripe-style-input {
   box-sizing: border-box;
-  height: 40px;
+  height: 60px;
   padding: 10px 12px;
   border: 1px solid transparent;
   border-radius: 0px;
@@ -25,6 +25,7 @@
 
 .stripe-style-input::placeholder {
     color: #aab7c4;
+    text-align: justify;
 }
 
 
