--- a/facilities/templates/facilities/freeweights.html
+++ b/facilities/templates/facilities/freeweights.html
@@ -15,10 +15,11 @@
 
 {% block content %}
 <div class="container h-100">
+    <div class="overlay"></div>
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
-                <img src="{{{{ MEDIA_URL }}noimage.jpg}}" alt="Avatar" style="width:300px;height:300px;">
+                <img src="{{ MEDIA_URL }}noimage.jpg}}" alt="Avatar" style="width:300px;height:300px;">
             </div>
             <div class="flip-card-back">
                 <h1>John Doe</h1>
