--- a/static/css/base.css
+++ b/static/css/base.css
@@ -154,9 +154,21 @@ footer {
     .header-container {
         padding-top: 175px;
     }
-    .display-4.logo-font.text-lean {
+
+/*--Mobile device navbar fix--*/
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+
+    .display-4.logo-font.text-black {
         font-size: 2rem;
     }
+
     .nav-link {
         padding: 0.15rem;
     }
@@ -164,11 +176,11 @@ footer {
     .nav-link i.fa-lg {
         font-size: 1rem;
     }
+
     .navbar-toggler {
         padding: .6rem .6rem;
         font-size: 1rem;
     }
-}
 
 /*--Toasts--*/
 .message-container {
