--- a/templates/base.html
+++ b/templates/base.html
@@ -155,7 +155,7 @@
     {% endblock %}
 
 
-    <footer class="mt-2">
+    <footer class="">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 mt-2">
@@ -174,7 +174,7 @@
                     </ul>
                 </div>
                 <!--Contact us-->
-                <div class="col-sm-4">
+                <div class="col-sm-4 mt-2">
                     <h5>Contact Us</h5>
                     <ul>
                         <li>
@@ -189,7 +189,7 @@
                     </ul>
                 </div>
                 <!--Social Media with external links to the developers own social media-->
-                <div class="col-sm-4">
+                <div class="col-sm-4 mt-2">
                     <h5>Social Media</h5>
                     <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/" target="_blank"><i
                             class="fab fa-instagram-square"></i></a>
