--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -33,15 +33,18 @@
 </div>
 <div class="row">
     <div class="col-12 col-lg-6">
-        <p class="text-muted">Profile Information</p>
         <div class="card-deck">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="#" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <button class="card-text gym-now-button">Update profile</button>
+                    <h5 class="card-title">Profile Information</h5>
+                    <p class="card-text">
+                    <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button class=" gym-now-button text-uppercase float-right">Update profile</button>
+                    </form>
+                    </p>
                 </div>
             </div>
 
