--- a/static/css/base.css
+++ b/static/css/base.css
@@ -159,6 +159,7 @@ footer {
     .header-container {
         padding-top: 175px;
     }
+}
 
 /*--Mobile device navbar fix--*/
 @media (max-width: 991px) {
@@ -186,6 +187,7 @@ footer {
         padding: .6rem .6rem;
         font-size: 1rem;
     }
+}
 
 /*--Toasts--*/
 .message-container {
