--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">My Temple Lean Profile</h2>
+            <h2 class="logo-font mb-4 text-center">My Temple Lean Profile</h2>
             <hr>
         </div>
     </div>
@@ -47,14 +47,17 @@
                     </p>
                 </div>
             </div>
-
-
-        </div>
-
-        <div class="col-12 col-lg-6">
-
         </div>
     </div>
+    <div class="col-12 col-lg-6">
+                <h5>Order History</h5>
+                <p>{{ orders }}</p>
+        </div>
 </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
